# rules_peg

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  peg_go.bzl  repositories.bzl
hack/: expose-generated-go.sh
tests/example/: BUILD.bazel  example.go  example.peg  example_test.go
